# argmax

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vercel.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: backtest.py
docs/: api_examples.md  architecture.md
examples/: config.yaml  custom_strategy.py
public/: app.html  app.js  index.html  landing.css  landing.js  styles.css
src/argmax/: __init__.py  cli.py  web.py
src/argmax/analytics/: __init__.py  metrics.py
src/argmax/backtest/: __init__.py  engine.py  result.py
src/argmax/data/: __init__.py  yahoo.py
src/argmax/indicators/: __init__.py  core.py
src/argmax/optimization/: __init__.py  search.py
src/argmax/plots/: __init__.py  core.py
src/argmax/portfolio/: __init__.py  core.py
src/argmax/strategies/: __init__.py  base.py  builtin.py
tests/: conftest.py  test_analytics.py  test_backtest.py  test_cli.py  test_data.py  test_indicators.py  test_optimization.py  test_plots.py  test_portfolio.py  test_strategies.py  test_web.py
