[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "argmax"
version = "0.2.0"
description = "Argmax: modular, bias-aware quantitative strategy backtesting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Argmax contributors" }]
keywords = ["backtesting", "quantitative-finance", "trading", "portfolio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
argmax = "argmax.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/argmax"]

[tool.hatch.build.targets.sdist]
include = ["src/argmax", "public", "README.md", "LICENSE"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["argmax"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.vercel]
entrypoint = "api.backtest:handler"
